[gd_scene load_steps=75 format=2]

[ext_resource path="res://Enemys/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-00.png" type="Texture" id=2]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-01.png" type="Texture" id=3]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-02.png" type="Texture" id=4]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-03.png" type="Texture" id=5]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-04.png" type="Texture" id=6]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-05.png" type="Texture" id=7]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-06.png" type="Texture" id=8]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-07.png" type="Texture" id=9]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-08.png" type="Texture" id=10]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-09.png" type="Texture" id=11]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle-10.png" type="Texture" id=12]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit0.png" type="Texture" id=13]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit1.png" type="Texture" id=14]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit2.png" type="Texture" id=15]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit3.png" type="Texture" id=16]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit4.png" type="Texture" id=17]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit5.png" type="Texture" id=18]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit6.png" type="Texture" id=19]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit7.png" type="Texture" id=20]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-00.png" type="Texture" id=21]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-01.png" type="Texture" id=22]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-02.png" type="Texture" id=23]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-03.png" type="Texture" id=24]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-04.png" type="Texture" id=25]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-05.png" type="Texture" id=26]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-06.png" type="Texture" id=27]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-07.png" type="Texture" id=28]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-08.png" type="Texture" id=29]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-09.png" type="Texture" id=30]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-10.png" type="Texture" id=31]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-11.png" type="Texture" id=32]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-12.png" type="Texture" id=33]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-13.png" type="Texture" id=34]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Dead-14.png" type="Texture" id=35]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton React-00.png" type="Texture" id=36]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton React-01.png" type="Texture" id=37]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton React-02.png" type="Texture" id=38]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton React-03.png" type="Texture" id=39]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack01.png" type="Texture" id=40]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack02.png" type="Texture" id=41]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack03.png" type="Texture" id=42]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack04.png" type="Texture" id=43]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack05.png" type="Texture" id=44]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack06.png" type="Texture" id=45]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack07.png" type="Texture" id=46]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack08.png" type="Texture" id=47]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack09.png" type="Texture" id=48]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack10.png" type="Texture" id=49]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack11.png" type="Texture" id=50]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack12.png" type="Texture" id=51]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack13.png" type="Texture" id=52]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack14.png" type="Texture" id=53]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack15.png" type="Texture" id=54]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack16.png" type="Texture" id=55]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack17.png" type="Texture" id=56]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack18.png" type="Texture" id=57]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk01.png" type="Texture" id=58]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk02.png" type="Texture" id=59]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk03.png" type="Texture" id=60]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk04.png" type="Texture" id=61]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk05.png" type="Texture" id=62]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk06.png" type="Texture" id=63]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk07.png" type="Texture" id=64]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk08.png" type="Texture" id=65]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk09.png" type="Texture" id=66]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk10.png" type="Texture" id=67]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk11.png" type="Texture" id=68]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk12.png" type="Texture" id=69]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk13.png" type="Texture" id=70]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "hit",
"speed": 12.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "react",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 9.64673, 12.2097 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10.1418, 7.70057 )

[node name="Enemy" type="KinematicBody2D"]

input_pickable = false
collision_layer = 9
collision_mask = 9
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "hit"
_sections_unfolded = [ "Transform" ]

[node name="Animatedattack" type="AnimatedSprite" parent="." index="1"]

visible = false
position = Vector2( 9, -3 )
frames = SubResource( 2 )
animation = "attack"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.0153618, 3.7933 )
scale = Vector2( 0.934776, 1 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="RayCast2D" type="RayCast2D" parent="." index="3"]

position = Vector2( 9.62426, 10.193 )
scale = Vector2( 1, 0.33605 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 22 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="SeePlayer" type="RayCast2D" parent="." index="5"]

rotation = 4.71239
scale = Vector2( 1, 1.79603 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 16
_sections_unfolded = [ "Transform" ]

[node name="AttPlayer" type="RayCast2D" parent="." index="6"]

rotation = 4.71239
scale = Vector2( 0.769372, 0.37793 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 16
_sections_unfolded = [ "Transform" ]

[node name="Playerabove" type="RayCast2D" parent="." index="7"]

position = Vector2( 0, -8.7 )
rotation = 3.14159
scale = Vector2( 8, 0.107866 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 16
_sections_unfolded = [ "Transform" ]

[node name="is_on_wall" type="Area2D" parent="." index="8"]

visible = false
position = Vector2( 0, -0.0873718 )
scale = Vector2( 1, 0.43315 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 9
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="is_on_wall" index="0"]

position = Vector2( 0, 4 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="9"]

position = Vector2( -0.269234, 0.179489 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="ColliD" type="CollisionPolygon2D" parent="Area2D" index="0"]

position = Vector2( 1.79488, -0.179487 )
build_mode = 0
polygon = PoolVector2Array( 29.3832, 15.8422, 8.52637, 15.8721, 8.34688, -8.71779, -10.2302, -9.16651, -10.1404, -12.5768, -7.08914, -16.4358, 0.0904045, -19.6666, 9.69305, -19.3076, 17.6803, -16.1666, 24.7701, -9.16651, 27.5321, 0.463478 )
disabled = true

[node name="ColliE" type="CollisionPolygon2D" parent="Area2D" index="1"]

position = Vector2( -13.7309, -0.269234 )
build_mode = 0
polygon = PoolVector2Array( 4.03687, 15.9846, -16.8713, 15.9619, -16.0636, 0.974596, -10.9481, -10.6922, -2.60192, -17.423, 8.30873, -19.899, 15.0013, -19.899, 18.847, -18.1409, 23.2444, -14.0127, 23.0649, -8.89728, 4.17927, -8.50742 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="animation_finished" from="Animatedattack" to="." method="_on_Animatedattack_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="is_on_wall" to="." method="_on_is_on_wall_body_entered"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]


